--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "font-awesome": "^4.7.0",
     "json": "^11.0.0",
     "json-server": "^1.0.0-beta.1",
     "jwt-decode": "^4.0.0",
