--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@paypal/paypal-js": "^8.1.2",
     "@paypal/react-paypal-js": "^8.7.0",
     "@popperjs/core": "^2.11.8",
@@ -11,10 +12,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "crypto-browserify": "^3.12.0",
+    "emailjs": "^4.0.3",
     "font-awesome": "^4.7.0",
     "json": "^11.0.0",
     "json-server": "^1.0.0-beta.1",
     "jwt-decode": "^4.0.0",
+    "nodemailer": "^6.9.15",
+    "os-browserify": "^0.3.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-confirm-alert": "^3.0.6",
@@ -24,6 +29,8 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "server": "^1.0.39",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
